--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jade": "^0.15.0",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html": "^5.0.1",
-    "grunt-sass": "^1.0.0",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.1.0"
   }
