--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-html": "^5.0.1",
+    "grunt-w3c-html-validation": "^0.1.6",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.1.0"
   }
