--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-prompt": "^1.3.0",
+    "grunt-shell": "^1.1.2",
     "grunt-w3c-html-validation": "^0.1.6",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.1.0"
