--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Oscar Bustos",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.1.1",
+    "cssnano": "^3.3.2",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.6.0",
@@ -12,9 +14,11 @@
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-postcss": "^0.7.1",
     "grunt-shell": "^1.1.2",
     "grunt-w3c-html-validation": "^0.1.6",
     "load-grunt-tasks": "^3.2.0",
+    "pixrem": "^3.0.0",
     "time-grunt": "^1.1.0"
   }
 }
